Fix tooltip element gaps

--- a/index.css
+++ b/index.css
@@ -173,7 +173,7 @@ html, body {
     flex-direction: column;
     font-size: 1.5em;
     left: 0;
-    max-width: 25vw;
+    max-width: 30vw;
     outline: white solid 2px;
     position: absolute;
     top: 0;
@@ -207,7 +207,6 @@ html, body {
 #info-stats {
     display: flex;
     flex-direction: column;
-    gap: 0.5em;
     padding: 0.5em;
 }
 
